Refactoring of importer classes into the new "importer" submodule. Added also import database from studio